[package]
name = "csv_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror ="1.0.43"
anyhow = "1.0.71"
cargo-audit = "0.20.0"
log.workspace = true
env_logger.workspace = true

uuid = {version = "1.4.0", features = ["v4", "serde"]}
serde = {version = "1", features = ["derive", ]}
serde_json="1"
