[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror ="1.0.43"
anyhow = "1.0.71"
cargo-audit = "0.18.0"
log.workspace = true
env_logger.workspace = true

reqwest = {version = "0.11", features = ["json"]}
tokio = { version ="^1", features = ["full"] }


