[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if we going to use as it is on the "root"
log.workspace = true
rand.workspace = true
#if we need to add more definitions for this specific crate
env_logger = {workspace = true}
#
regex = { workspace = true, features = ["unicode"] } 
libs = {path = "../libs"}
